# firegen

./: Cargo.toml  README.md  concept
pkg/: firegen.js  firegen_bg.js  firegen_bg.wasm  package.json
playground/: firegen.yml  firegenAST  others.fireSchema  schema.fireSchema
playground/schema/todo/: todo.fireSchema
playground/todo/: todo.fireSchema
playground/user/: user.fireSchema
src/: lib.rs  main.rs  parse_schema_str.rs  read_schema.rs  schema.rs
src/core/: mod.rs  schema.rs
src/core/parser/: mod.rs  parse_schema_str.rs
src/reader/: fs.rs  mod.rs  read_config_yml.rs  read_schema.rs
