[package]
name = "firegen"
version = "0.1.0-beta"
edition = "2018"
repository = "https://github.com/Ubugeeei/firegen"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.0"
wasm-bindgen = "0.2"
yaml-rust = "0.4"